<resources>
    <string name="app_name">BadgR</string>
    <!-- Strings related to login / homepage -->
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome </string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="troop">Troop #</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="first_name">First Name</string>
    <string name="password_must_contain_a_capital_letter">Password must contain a capital letter</string>
    <string name="numberString">Password must contain at least 1 number</string>
    <string name="passwordChars">Password must be at least 8 characters</string>
    <string name="Loading">LOADING, PLEASE WAIT</string>
    <string name="title_activity_scout_tab">scoutTab</string>
    <string name="eagleReq">Eagle Required</string>
    <string name="NEagleReq">Not Eagle Required</string>
    <string name="added">Added to My List!</string>
    <string name="toAdd">Add to My List</string>
    <string name="MBSearch">Search For Merit Badges:</string>
    <string name="enter_badge_name">Enter Badge Name</string>
    <string name="search">Search</string>
    <string name="no_search_results">No Search Results</string>
    <string name="completedBadge">Fully Completed!</string>
    <string name="my_merit_badges">My Merit Badges:</string>
    <string name="my_completed_badges">My Completed Badges</string>
    <string name="no_badges_completed">No Merit Badges Completed! Head over to \"My Badge List\" to complete some!</string>
    <string name="clear_changed_boxes">Clear Changed Boxes</string>
    <string name="collapse_all_boxes">Collapse All Boxes</string>
    <string name="scouts_bsa_resources">Scouts BSA Resources</string>
    <string name="demo_page">Merit Badge Demo Page</string>
    <string name="demo_pic_desc_short">Demo picture. Full webpage to come</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in">Sign in</string>
    <string name="register_new_user">Register New User</string>
    <string name="app_icon">App Icon</string>
    <string name="add_to_my_list">Add to My List</string>
    <string name="imageIcon">imageIcon</string>
    <string name="user_login">User Login</string>
    <string name="mb_name">Merit Badge Name here</string>
    <string name="eagle_req">Is an eagle required?</string>
    <string name="badges_welcome">Badges in progress: Go to \"My Badge List\" to complete requirements</string>
    <string name="progressGrid"># of Badges in Progress:</string>
    <string name="eagleGrid"># of Eagle Required in Progress:</string>
    <string name="compGrid"># of Badges Completed:</string>
    <string name="app_image">App image</string>
    <string name="welcome_info">Welcome to BadgR! Go to the \"Search\" tab to find merit badges.</string>
    <string name="enter_B_name">Enter Badge Name (Click search for all badges)</string>
    <string name="welcome_to_badgr">Welcome to Badgr</string>
    <string name="textreplace">TextReplace</string>
    <string name="assign_badge_text">Choose which scouts to assign merit badge to</string>
    <string name="assign_to_scout">Assign to Scout</string>
    <string name="add_to_scouts">Add to scouts</string>
    <string name="my_troop_scouts">My Troop Scouts</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="message_scouts">Message scouts</string>
    <string name="recent_activity_changes">Recent Activity Changes</string>
    <string name="profile">Profile</string>
    <string name="go_back">Go back</string>
    <string name="no_nots">There are no new notifications!</string>
    <string name="clear">clear</string>
    <string name="no_badges">This scout has not added or completed any merit badges</string>
    <string name="all_nots">All notifications</string>
    <string name="all_xa_nots">All\nPrevious\nNotifications</string>
    <string name="troop_statistics">Troop Statistics</string>
    <string name="cancel">Cancel</string>
    <string name="smNoNots">There are no notifications. Have your scouts complete some badges!</string>
    <string name="scoutNoBadges">No badges added! Go to &quot;Search&quot; to add some!</string>
    <string name="noScouts">There are no scouts added to your troop.</string>

</resources>