<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="20dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/primaryColorDark"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/registerFName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:hint="@string/first_name"
                android:nextFocusForward="@id/registerLName"
                android:inputType="text"
                android:textSize="@dimen/newsMoreTextSize"
                android:maxLines="1"
                android:autofillHints="First name"
                android:textColorHighlight="@color/primaryColorDark"/>

            <EditText
                android:id="@+id/registerLName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:nextFocusForward="@id/registerUser"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:textSize="@dimen/newsMoreTextSize"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/last_name"
                android:autofillHints=""
                android:textColorHighlight="@color/primaryColorDark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/registerUser"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_weight="1"
                android:textSize="@dimen/newsMoreTextSize"
                android:hint="@string/email"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:autofillHints=""
                android:textColorHighlight="@color/primaryColorDark"/>

            <EditText
                android:id="@+id/registerPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:textSize="@dimen/newsMoreTextSize"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:autofillHints=""
                android:textColorHighlight="@color/primaryColorDark"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/registerAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/newsMoreTextSize"
                android:hint="@string/age"
                android:inputType="number"
                android:autofillHints=""
                android:textColorHighlight="@color/primaryColorDark"/>

            <EditText
                android:id="@+id/registerTroop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/newsMoreTextSize"
                android:hint="@string/troop"
                android:inputType="number"
                android:autofillHints=""
                android:textColorHighlight="@color/primaryColorDark"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/blank"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                />


            <TextView
                android:id="@+id/lengthCheck"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/primaryColorDark"
                android:text="@string/passwordChars"
                android:layout_toEndOf="@id/blank"/>

            <TextView
                android:id="@+id/numberCheck"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/primaryColorDark"
                android:text="@string/numberString"
                android:layout_toEndOf="@id/blank"
                android:layout_below="@id/lengthCheck"/>


            <TextView
                android:id="@+id/capitalCheck"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/primaryColorDark"
                android:text="@string/password_must_contain_a_capital_letter"
                android:layout_toEndOf="@id/blank"
                android:layout_below="@id/numberCheck"/>
        </RelativeLayout>




        <Button
            android:id="@+id/registerButton"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="200dp"
            android:enabled="false"
            android:drawable="@drawable/change_color"
            android:textSize="@dimen/newsMoreTextSize"
            android:drawableTint="@drawable/change_back_color"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            tools:targetApi="m"
            tools:ignore="InefficientWeight" />

        <TextView
            style="@style/parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:text="@string/signup_login_hint"
            android:onClick="openLoginApp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".9"
        android:visibility="invisible"
        android:background="@color/grey">

        <ProgressBar
            android:id="@+id/progress_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleX="4"
            android:scaleY="4"/>
        <TextView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Loading"
            android:textColor="@color/white"
            android:scaleY="2"
            android:scaleX="2"
            android:layout_gravity="center"/>
    </FrameLayout>

</androidx.cardview.widget.CardView>
