<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    style="@style/loginCard">


    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/user_login" />


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:backgroundTint="@color/primaryColorDark"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/newsMoreTextSize" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:backgroundTint="@color/primaryColorDark"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/newsMoreTextSize" />

        <Button
            android:id="@+id/login"
            style="@style/loginButton"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:drawable="@drawable/change_color"
            android:drawableTint="@drawable/change_back_color"
            android:enabled="false"
            android:text="@string/action_sign_in"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/noAccount"
            style="@style/parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryColorDark"
            android:textStyle="bold" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingScreenLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".9"
        android:background="@color/grey"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_loader_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleX="4"
            android:scaleY="4" />

        <TextView
            android:id="@+id/loading_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleX="2"
            android:scaleY="2"
            android:text="@string/Loading"
            android:textColor="@color/white" />
    </FrameLayout>
</RelativeLayout>

