<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.ScoutFrags.SResource">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/scouts_bsa_resources"
        android:textColor="@color/light_grey"
        android:textSize="30sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginBottom="7dp"
        android:layout_below="@id/title"
        android:backgroundTint="@color/light_grey"
        android:background="@color/light_grey"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:layout_marginBottom="100dp"
        android:id="@+id/imgView"
        android:contentDescription="@string/demo_page"
        android:background="@drawable/meritbadgedemopicpartial"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:text="@string/demo_pic_desc_short"
        android:textSize="35sp"
        android:textAlignment="center"/>

</RelativeLayout>