<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.ScoutFrags.SWelcomeFragment">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/light_grey"
        android:textSize="30sp" />

    <View
        android:id="@+id/dividerMyBadges"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/welcomeText"
        android:background="@color/light_grey"
        android:backgroundTint="@color/light_grey" />

    <TextView
        android:id="@+id/welcomeBadgesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/badges_welcome"
        android:textSize="30sp"
        android:textColor="@color/light_grey"
        android:layout_below="@id/dividerMyBadges"
        android:textAlignment="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <View
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/welcomeBadgesText"
        android:background="@color/light_grey"
        android:backgroundTint="@color/light_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/div"
        android:baselineAligned="false"
        android:weightSum="2">

        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipChildren="true"
            android:layout_weight="0"
            android:visibility="gone"/>

        <GridLayout
            android:id="@+id/infoGrid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_weight="1">

            <TextView
                style="@style/gridStyle"
                android:text="@string/progressGrid"
                />

            <TextView
                android:id="@+id/progressGrid"
                style="@style/gridStyle"
                android:text="@string/progressGrid"
                />

            <TextView
                style="@style/gridStyle"
                android:text="@string/compGrid"
                />

            <TextView
                android:id="@+id/completedGrid"
                style="@style/gridStyle"
                android:text="@string/progressGrid"
                />

            <TextView
                style="@style/gridStyle"
                android:text="@string/eagleGrid"
                />

            <TextView
                android:id="@+id/eagleGrid"
                style="@style/gridStyle"
                android:text="@string/progressGrid"
                />



        </GridLayout>

    </LinearLayout>
</RelativeLayout>