<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.ScoutFrags.SSearchBadges">

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/MBSearch"
        android:textColor="@color/light_grey"
        android:textSize="30sp" />

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/searchTitle"
        android:layout_marginBottom="7dp"
        android:background="@color/light_grey"
        android:backgroundTint="@color/light_grey" />

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/badgeSearchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="name"
            android:hint="@string/enter_B_name"
            android:layout_weight="7"
            android:inputType="text"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/searchBadgesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/search" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/searchProgress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/linLayout"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noSearchResults"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@id/linLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/no_search_results"
        android:textColor="@color/light_grey"
        android:textSize="30sp"
        android:visibility="gone" />

    <ExpandableListView
        android:id="@+id/expandableListViewSearch"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_below="@id/searchProgress"
        android:childDivider="@color/primaryColor"
        android:divider="@color/primaryColorDark"
        android:dividerHeight="1dp" />

    <Button
        android:id="@+id/searchSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="45dp"
        android:paddingStart="45dp"
        android:paddingEnd="50dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="50dp"
        android:textSize="30sp"
        android:text="@string/submit" />

</RelativeLayout>