<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.SMFrags.SMSearchBadgesFragment">


    <FrameLayout
        android:id="@+id/scoutPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".9"
        android:background="@color/grey"
        android:visibility="invisible">

        <RelativeLayout
            android:id="@+id/miniList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="400dp"
            android:background="@color/white">


            <TextView
                android:id="@+id/textReplace"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/assign_badge_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ListView
                android:id="@+id/scoutList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textReplace"
                android:background="@color/white" />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fabSM"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/add_to_scouts"
                android:padding="10dp"
                android:text="@string/add_to_scouts"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="50dp"
                android:contentDescription="@string/cancel"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>


    </FrameLayout>


    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/SMsearchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="20dp"
            android:text="@string/MBSearch"
            android:textColor="@color/light_grey"
            android:textSize="30sp" />

        <View
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@id/SMsearchTitle"
            android:layout_marginBottom="10dp"
            android:background="@color/light_grey"
            android:backgroundTint="@color/light_grey" />

        <LinearLayout
            android:id="@+id/linLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/SMbadgeSearchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"
                android:layout_weight="6"
                android:autofillHints="name"
                android:hint="@string/enter_badge_name"
                android:inputType="text"
                android:padding="10dp" />

            <Button
                android:id="@+id/SMsearchBadgesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_blue_dark"
                android:padding="10dp"
                android:text="@string/search"
                android:textSize="20sp" />

        </LinearLayout>


        <ProgressBar
            android:id="@+id/SMsearchProgress"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/linLayout"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/SMnoSearchResults"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@id/linLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/no_search_results"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="gone" />

        <ExpandableListView
            android:id="@+id/SMexpandableListViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SMsearchProgress"
            android:layout_marginBottom="150dp"
            android:divider="@color/primary_blue"
            android:dividerHeight="1dp" />

        <Button
            android:id="@+id/SMAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/primary_blue_dark"
            android:enabled="false"
            android:padding="15dp"
            android:text="@string/assign_to_scout"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </RelativeLayout>

</RelativeLayout>